--- a/GatewayWithRibbon/build.gradle
+++ b/GatewayWithRibbon/build.gradle
@@ -30,8 +30,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
-	implementation 'org.springframework.cloud:spring-cloud-netflix-hystrix-stream'
-	implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
+//	implementation 'org.springframework.cloud:spring-cloud-netflix-hystrix-stream'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
